@@ -24,6 +24,7 @@ Kevin Powell <KPowell@sirf.com>
 Steven Van Ingelgem <karel@linux.be>
 Anders F. Bjorklund <afb@algonet.se>
 Scott Bailey <scott_bailey@users.sourceforge.net>
+Aleksander Jaromin <olqjar@o2.pl>
 
 
  Reused code:
