@@ -66,6 +66,13 @@
             $(os.path.splitext(os.path.basename(INPUT_FILE))[0]).vcw
         </default-filename>
     </format>
+    
+    <format id="msvs2003prj">
+        <description>MS Visual Studio 2003 project files</description>
+        <default-filename>
+            $(os.path.splitext(os.path.basename(INPUT_FILE))[0]).sln
+        </default-filename>
+    </format>
 
     <format id="msvs2005prj">
         <description>MS Visual Studio 2005 project files</description>
